--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <!-- Konfigurasi Global -->
             <div class="bg-white p-6 rounded-2xl shadow-sm border border-slate-200">
                 <h2 class="text-base font-semibold text-slate-900 mb-5 flex items-center gap-2">
-                    <i class="ph ph-gear text-slate-500 text-xl"></i> Pengaturan Sistem
+                    <i class="ph ph-gear text-slate-500 text-xl"></i> Pengaturan
                 </h2>
                 <div class="space-y-4">
                     <div>
@@ -491,4 +491,5 @@
         });
     </script>
 </body>
+
 </html>
